--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
     "@phosphor-icons/react": "^2.0.15",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/themes": "^2.0.3",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
