--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@phosphor-icons/react": "^2.0.15",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/themes": "^2.0.3",
+    "axios": "^1.6.7",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
